# mcu

./: CMakeLists.txt
stm32f1/: stm32f1.cfg  stm32f1_toolchain.cmake
stm32f1/core/: STM32F103XB.LD  core.h  stm32f1.cfg  stm32f1xx.h
stm32f1/hal/inc/: stm32f1xx_hal_conf.h
stm32f103c8t6/core/: STM32F103XB_FLASH.ld
stm32f4/: stm32f4_toolchain.cmake
stm32f4/core/: core.h  stm32f4.cfg  stm32f4xx.h
